--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,6 @@ body {
   }
 
   .contactFields {
-    @apply rounded-sm border-b border-[#242424] bg-slate-400/10 px-6 py-4 text-gray-500 outline-none transition-all placeholder:text-gray-500 hover:border-[#ff25e2] focus:border-[#ff25e2]/40 focus:text-[#ff25e2]/40;
+    @apply rounded-sm border-b border-[#242424] bg-slate-400/10 px-6 py-1 md:py-4 text-gray-500 outline-none transition-all placeholder:text-gray-500 hover:border-[#ff25e2] focus:border-[#ff25e2]/40 focus:text-[#ff25e2]/40;
   }
 }
